# funthenticate

./: AGENTS.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/funthenticate/: __init__.py  auth.py  cli.py  conversion.py  core.py  drawing.py  number_guess.py  prompts.py  state.py  ui.py
src/funthenticate/assets/: funthenticate.css
tests/: test_funthenticate.py  test_showcase_server.py
